# Dra-bruna

./: .eslintrc.js  .gitignore  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Descricao dos Sistemas.md  Guia Visual.md  MIGRATION_TO_ONLINE_SUPABASE.md  README.md  SECURITY.md  database-schema-diagram.md  env.example  package-lock.json  package.json  rustfmt.toml  site_copy.md  supabase-schema.sql  ui_description_example.md
.github/: CODEOWNERS  SECURITY.md  branch-protection.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: app-ci.yml  ci.yml  release.yml  site-ci.yml
app-bruna/: .env  .eslintrc.json  ADMIN_CREDENTIALS.md  AUTH_SETUP.md  COMPILATION_SUCCESS.md  COMPLETE_SUCCESS_STATUS.md  DASHBOARD_IMPLEMENTATION.md  DEBUG_LOGS_ENHANCED_STATUS.md  FINAL_SUCCESS_STATUS.md  HYBRID_SYNC_IMPLEMENTATION.md  HYBRID_SYNC_README.md  HYBRID_SYNC_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  LOADING_FIX_STATUS.md  LOADING_LOOP_FIX_STATUS.md  LOADING_STATE_FIX_STATUS.md  LOGIN_DEBUG_INSTRUCTIONS.md  LOGIN_FIX_STATUS.md  LOGIN_TEST_INSTRUCTIONS.md  MAJOR_PROGRESS_STATUS.md  PROFILE_QUERY_TIMEOUT_STATUS.md  PRONTUARIO_MEDICO_IMPLEMENTATION.md  TIMEOUT_AND_ERROR_HANDLING_STATUS.md  TYPESCRIPT_FIXES.md  create-admin-user.js  dashboard-functions.sql  database_backup.sql  index.html  migration-clinics.sql  migration-medical-records.sql  package-lock.json  package.json  run_tests.bat  run_tests.sh  setup-supabase-simple.sql  setup-supabase.sql  supabase-schema.sql  tailwind.config.js  vite.config.ts
app-bruna/src/: App.tsx  index.css  test-profile-query.ts  test-supabase.ts
app-bruna/src-tauri/: Cargo.toml  tauri.conf.json
app-bruna/src-tauri/icons/: icon.icns
app-bruna/src-tauri/src/: auth.rs  auto_sync.rs  commands.rs  commands_database.rs  commands_hybrid.rs  commands_simple.rs  commands_simple_backup.rs  commands_simple_fixed.rs  commands_sync.rs  config.rs  crypto.rs  database.rs  database_cipher.rs  dpapi.rs  hybrid_sync.rs  keyvault.rs  main.rs  offline_cache.rs  performance.rs  real_time.rs  security.rs  supabase.rs
app-bruna/src-tauri/tests/: integration_tests.rs  mod.rs  test_config.rs
design-tokens/: README.md  package.json  tsconfig.json
design-tokens/fonts/: fonts.css
design-tokens/src/: index.ts  tokens.ts
docs/: DEPLOYMENT.md  DEVELOPMENT.md
docs/adr/: 0001-mono-repo-architecture.md  0002-technology-stack.md  0003-database-architecture.md  (+9 more)
site-bruna/: README.md  next.config.js  package.json  tailwind.config.js
(+97 files in other folders)
