[package]
name = "app-bruna"
version = "1.0.0"
description = "Sistema de gestão clínica Dra. Bruna"
authors = ["Dra. Bruna"]
license = "UNLICENSED"
repository = "https://github.com/dra-bruna/sistema-dra-bruna"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }

tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
base64 = "0.21"
aes-gcm = "0.10"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
hex = "0.4"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
pbkdf2 = "0.12"
argon2 = "0.5"
jwt = "0.16"
url = "2.5"
dotenv = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Win32_System_Memory"
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
